# InjectTool

./: .gitignore  Cargo.toml  Cross.toml  build.rs  build.sh
cpp/: fake_dlfcn.cpp
src/: cli.rs  inject.rs  main.rs  process_wrapper.rs  ptrace_wrapper.rs  sys_lib.rs
src/android_os/: sdk.rs
src/fake_fdlcn/: mod.rs
src/selinux/: mod.rs
