[package]
name = "inject_tool"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
anyhow = "1.0.70"
paste = "1.0.12"
libc = "0.2.153"
log = "0.4.21"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ptrace-do = { git = "https://github.com/TinyHai/ptrace-do" }

[target.'cfg(target_os="android")'.dependencies]
android_logger = "0.13.1"
ndk-sys = "0.6.0"

[profile.release]
strip = true
opt-level = "z"
lto = true

[build-dependencies]
cc = "1.0.96"